# FastAPI-TodoApp

./: database.py  database_postgre.py  main.py  models.py  pyproject.toml  requirements.txt  runtime.txt  todos.db
MySQL/: create_tables
routers/: auth.py  todos.py  users.py
static/todo/css/: base.css
templates/: add-todo.html  edit-todo.html  home.html  layout.html  login.html  navbar.html  register.html  user-interface.html
